[IMP] web, *: fix favorite alignment
*: account, hr_recruitment, project, lunch, mrp

By removing the absolute positioning on ".o_favorite" inside kanban
views, we allow it to align naturally with the rest of the elements,
thus removing the custom code that was needed for padding.

By doing so however the icon - which is now only visible on hovering the
card in the Project's kanban view - should remain visible at all times.
The behaviour would be the same as in other kanban views: an outlined
star when not active and a full yellow star when it is.

The margin on the kanban heading in the Manufacturing orders has been
removed to realign the top elements.

task-3462098

closes odoo/odoo#131559

--- a/addons/project/static/src/scss/project_dashboard.scss
+++ b/addons/project/static/src/scss/project_dashboard.scss
@@ -22,7 +22,6 @@
 
             &:first-child {
                  margin: 0 5px 0 0;
-                 padding-left: 12px
              }
 
             .o_value {
@@ -54,15 +53,6 @@
     @include media-breakpoint-down(md) {
         .o_view_nocontent {
             top: 15%;
-        }
-    }
-
-    .o_kanban_record {
-        div[name="is_favorite"] .fa-star-o {
-            visibility: hidden;
-        }
-        &:hover div[name="is_favorite"] .fa-star-o {
-            visibility: visible;
         }
     }
 }
